// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";
package pbj.integration.tests;
option java_multiple_files = true;

/**
 * A simple Greeter service.
 * With a multi-line javadoc.
 */
service Greeter {
  rpc sayHello (HelloRequest) returns (HelloReply) {}
  rpc sayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}
  /** testing here */
  rpc sayHelloStreamRequest (stream HelloRequest) returns (HelloReply) {}
  /**
   * multi-line test
   * is going on here.
   */
  rpc sayHelloStreamBidi (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}